<resources>
    <string name="app_name">사연남녀</string>
    <string name="feed">Feed</string>
    <string name="total_feed">모든사연</string>

    <string name="dashboard_tab_1">test</string>
    <string name="dashboard_tab_2">test2</string>
    <string name="dashboard_tab_3">test3</string>
    <string name="dashboard_tab_4">test</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>

    <!-- Transition_Names -->
    <string name="profile_name">ProfileName</string>
    <string name="profile_img">ProfileImg</string>
    <string name="tag_name">RankName</string>
    <string name="card_name">CardName</string>


    <!-- end Transition_Names -->

    <string name="email">junhyeoklee616@gmail.com</string>
    <string name="empty">Empty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_show_values">show_values</string>
    <string name="show_values_title">Show all values</string>
    <string name="show_values_desc">Dialog with all values</string>

    <string name="open_repo_title">Open repository</string>
    <string name="open_repo_desc">Open this app\'s source code</string>
    <string name="repo_url">https://github.com/JakeSteam/PreferencesExample</string>

    <string name="values_text">Boolean 1: %1$s\nBoolean 2: %2$s\nString 1: %3$s\nString 2: %4$s\nInt 1: %5$d\nInt 2: %6$d</string>
    <string name="values_title">Current values</string>
    <string name="values_close">OK</string>


    <string name="chef_label_pov">Cooking style: </string>
    <string name="chef_specialty_dish">Specialty dish:</string>
    <string name="chef_years_of_experience">%1$d years of experience</string>
    <string name="chef_action_hire">Hire</string>
    <string name="chef_generic">chef</string>
    <string name="chef_message_dialog_title">Ask %1$s for help in the restaurant?</string>
    <string name="chef_message_positive_action">Message</string>
    <string name="chef_message_negative_action">Cancel</string>
    <string name="chef_message_sent_toast">Message sent!</string>
    <string name="chef_message_added_to_bookmarks">%1$s added to bookmarks</string>
    <string name="chef_message_removed_from_bookmarks">%1$s removed from bookmarks</string>
    <string name="chef_message_added_to_favorites">%1$s added to favorites!</string>
    <string name="chef_message_removed_from_favorites">%1$s removed from favorites</string>
</resources>
