<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            android:background="@color/white"
            android:theme="?attr/actionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways"
            app:layout_collapseMode="pin"
            android:transitionName="@string/card_name"
            >

            <TextView
                android:id="@+id/tv_tag_search_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="남과 여"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/apple_sd_gothic_neo_l"
                android:layout_marginLeft="16dp"
                android:transitionName="@string/tag_name"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/apple_sd_gothic_neo_l"
                    android:gravity="center|right"
                    android:paddingRight="12dp"
                    android:text="남/여"
                    android:textColor="@color/gray"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/apple_sd_gothic_neo_l"
                    android:gravity="center|right"
                    android:paddingRight="4dp"
                    android:text="20대 / 30대"
                    android:textColor="@color/gray"
                    android:textSize="11sp" />
            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/sr_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_view_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="visible"
                        android:orientation="vertical"
                        shimmer:duration="800">

                        <!-- Adding 3 rows of placeholders -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <include layout="@layout/feed_placeholder_item" />
                            <include layout="@layout/feed_placeholder_item" />
                            <include layout="@layout/feed_placeholder_item" />
                            <include layout="@layout/feed_placeholder_item" />
                            <include layout="@layout/feed_placeholder_item" />

                        </LinearLayout>

                    </com.facebook.shimmer.ShimmerFrameLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                tools:itemCount="2"
                tools:listitem="@layout/adapter_feed"
                android:paddingBottom="32dp"/>

    </LinearLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>