<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/transparent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="540dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_scrollFlags="scroll|enterAlways"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:contentScrim="?attr/colorPrimary"
            android:layout_gravity="center"
            app:expandedTitleGravity="center"
            app:expandedTitleMarginTop="160dp"
            app:expandedTitleTextAppearance="@style/ExpandedAppBar"
            app:collapsedTitleTextAppearance="@style/CollapsingTitleStyle"
            app:statusBarScrim="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">



            <ImageView
                android:id="@+id/id_ProfileBackground_Image"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />
            <View
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:fitsSystemWindows="true"
                android:background="@drawable/background_gradient_img"
                />




            <ImageView
                android:id="@+id/id_Profile_Image_user"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_marginBottom="48dp"
                android:layout_gravity="center"
                android:transitionName="@string/profile_img"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_profile_nick_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="null"
                    android:transitionName="@string/profile_name"
                    android:textColor="@color/black"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="18sp"></TextView>

                <LinearLayout
                    android:id="@+id/profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                        <TextView
                            android:id="@+id/tv_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="남"
                            android:textSize="12sp"
                            android:textColor="@color/blue_gray_light"
                            android:fontFamily="@font/roboto_regular"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:textColor="@color/blue_gray_light"
                            android:textSize="11sp"
                            android:text="/"
                            />
                        <TextView
                            android:id="@+id/tv_age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="20대"
                            android:textSize="12sp"
                            android:textColor="@color/blue_gray_light"
                            android:fontFamily="@font/roboto_regular"
                            />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:text="소개"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_regular"
                    />

                <CheckBox
                    android:id="@+id/check_follow"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/background_follow_rounded"
                    android:button="@null"
                    android:fontFamily="@font/roboto_regular"
                    android:text="구독하기"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:orientation="vertical">
                </CheckBox>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="92dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >
                    <LinearLayout
                        android:id="@+id/layout_subscribing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ridi_batang"
                            android:textColor="@color/gray"
                            android:textSize="11sp"
                            android:text="구독중" />

                        <TextView
                            android:id="@+id/count_follow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:text="0" />

                    </LinearLayout>
                    <View
                        android:layout_width="2dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_height="42dp"
                        android:background="@color/deep_white"/>

                    <LinearLayout
                        android:id="@+id/layout_subscriber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ridi_batang"
                            android:textColor="@color/gray"
                            android:textSize="11sp"
                            android:text="구독자" />

                        <TextView
                            android:id="@+id/count_follower"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:text="0" />
                    </LinearLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_height="42dp"
                        android:background="@color/deep_white">

                    </View>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/ridi_batang"
                            android:textColor="@color/gray"
                            android:textSize="11sp"
                            android:text="쪽지 보내기" />

                        <ImageView
                            android:id="@+id/preferecnes_message"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginTop="12dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_message_hollow"
                            />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                >

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightGrey"
            ></View>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:tabTextAppearance="@style/MineCustomTabText"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabIndicatorColor="@color/main_Accent"
            app:tabTextColor="@color/sub_Accent"
            app:tabIconTint="@color/sub_Accent"
            app:tabSelectedTextColor="@color/sub_Accent"
            >

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

    </androidx.viewpager.widget.ViewPager>



    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>